--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "htap",
   "version": "1.0.2",
   "description": "A simple function to work with paths in a cross-platform manner.",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
@@ -18,10 +18,9 @@
     "typescript": "^2.5.3"
   },
   "files": [
-    "lib/index.js",
-    "lib/index.js.map",
-    "lib/index.d.ts",
-    "src/index.ts"
+    "dist/index.js",
+    "dist/index.js.map",
+    "dist/index.d.ts"
   ],
   "author": {
     "name": "Avi Vahl",
