--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register src/index.spec.ts"
+    "test": "mocha --require ts-node/register src/index.spec.ts --watch-extensions ts "
   },
   "devDependencies": {
     "@types/chai": "^4.0.4",
-    "@types/mocha": "^2.2.43",
+    "@types/mocha": "^2.2.44",
     "chai": "^4.1.2",
-    "mocha": "^4.0.0",
+    "mocha": "^4.0.1",
     "ts-node": "^3.3.0",
-    "typescript": "^2.5.3"
+    "typescript": "^2.6.1"
   },
   "files": [
     "dist/index.js",
